--- a/custom-avatar-hints.css
+++ b/custom-avatar-hints.css
@@ -1,5 +1,5 @@
-@import url("https://a-user-s-discord-themes.github.io/Custom-Avatar-Hint/app/language-hell.css")
-@import url("https://a-user-s-discord-themes.github.io/Custom-Avatar-Hint/app/database.css")
+@import url("https://a-user-s-discord-themes.github.io/Custom-Avatar-Hint/app/language-hell.css");
+@import url("https://a-user-s-discord-themes.github.io/Custom-Avatar-Hint/app/database.css");
 
 .avatarHint-1qgaV3 .avatarHintInner-Dco91E{
     font-size: 0;
