Update and rename custom-avatar-hints.css to base.css

--- a/base.css
+++ b/base.css
@@ -1,6 +1,8 @@
 @import url("https://a-user-s-discord-themes.github.io/Custom-Avatar-Hint/app/language-hell.css");
 @import url("https://a-user-s-discord-themes.github.io/Custom-Avatar-Hint/app/database.css");
 
+/*I DON'T RECOMMEND TO @import THIS FILE. INSTEAD, COPY ALL THE CODE AND PASTE IT*/
+
 .avatarHint-1qgaV3 .avatarHintInner-Dco91E{
     font-size: 0;
     text-transform: none;
