--- a/app/language-hell.css
+++ b/app/language-hell.css
@@ -1,6 +1,13 @@
-/*English US/UK*/
+/*(Default) English US/UK*/
 .wrapper-3t9DeA + .avatarHint-1qgaV3{
     --avatar-hint-text: "VIEW PROFILE";
+    --avatar-hint-size: 10px;
+    --avatar-hint-color: #fff;
+}
+
+/*PTBR*/
+html[lang="pt-BR"] .wrapper-3t9DeA + .avatarHint-1qgaV3{
+    --avatar-hint-text: "VER PERFIL";
     --avatar-hint-size: 10px;
     --avatar-hint-color: #fff;
 }
