Added 👑 Reĝino Kastilo's avahint

--- a/app/database.css
+++ b/app/database.css
@@ -22,3 +22,14 @@
     --avatar-hint-text: "Master XD";
     --avatar-hint-size: 12px;
 }
+
+/*👑 Reĝino Kastilo#0115*/
+[aria-label*="143476079267414016, "],
+[aria-label*="143476079267414016, "] + .avatarHint-1qgaV3,
+[user_by_bdfdb="143476079267414016"],
+[user_by_bdfdb="143476079267414016"] .avatarHint-1qgaV3{
+    --avatar-hint-text: "^°•~•°^";
+    --avatar-hint-size: 10px;
+    --avatar-hint-color: #ba005d;
+    --avatar-hint-font: "Comic Sans MS", "Comic Sans", cursive;;}
+}
