ok i'm very idiot

--- a/app/database.css
+++ b/app/database.css
@@ -31,7 +31,7 @@
     --avatar-hint-text: "^°•~•°^";
     --avatar-hint-size: 18px;
     --avatar-hint-color: #ba005d;
-    --avatar-hint-font: "Comic Sans MS", "Comic Sans", cursive;;}
+    --avatar-hint-font: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 /*With Mask | ດຽວ#1337*/
