--- a/base.css
+++ b/base.css
@@ -1,5 +1,5 @@
-@import url("https://a-user-s-discord-themes.github.io/Custom-Avatar-Hint/app/language-hell.css");
-@import url("https://a-user-s-discord-themes.github.io/Custom-Avatar-Hint/app/database.css");
+@import url("https://custom-avatar-hints.github.io/hints/app/language-hell.css");
+@import url("https://custom-avatar-hints.github.io/hints/app/database.css");
 
 /*I DON'T RECOMMEND TO @import THIS FILE. INSTEAD, COPY ALL THE CODE AND PASTE IT*/
 
