--- a/app/database.css
+++ b/app/database.css
@@ -83,9 +83,9 @@
 [data-user-id*="250353310698176522"] + .avatarHint-1qgaV3,
 [user_by_bdfdb="250353310698176522"],
 [user_by_bdfdb="250353310698176522"] .avatarHint-1qgaV3{
---avatar-hint-text: "🌙Enchanted Symphony";
+--avatar-hint-text: "Lapis Lazuli";
 --avatar-hint-size: 10px;
---avatar-hint-color: #ffc501;
+--avatar-hint-color: #bdf9ea;
 }
 
 /*boop#9999*/
