--- a/app/database.css
+++ b/app/database.css
@@ -1,4 +1,5 @@
 /*importing custom fonts bcs why not?*/
+@import url('https://fonts.googleapis.com/css?family=Merriweather Sans');
 @font-face {font-family: 'Product Sans';font-style: normal;font-weight: 400;src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/productsans/v5/HYvgU2fE2nRJvZ5JFAumwegdm0LZdjqr5-oayXSOefg.woff2) format('woff2');}
 
 /*Database*/
@@ -172,4 +173,14 @@
 --avatar-hint-text: "ツ";
 --avatar-hint-size: 25px;
 --avatar-hint-color: #fff;
+}
+
+/*imnothurb#8286*/
+[data-user-id*="352464264981905409"],
+[data-user-id*="352464264981905409"] + .avatarHint-1qgaV3,
+[user_by_bdfdb="352464264981905409"],
+[user_by_bdfdb="352464264981905409"] .avatarHint-1qgaV3{
+--avatar-hint-text: "bruh click";
+--avatar-hint-size: 14px;
+--avatar-hint-font: 'Merriweather Sans';
 }
